--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 const response = await fetch('https://openrouter.ai/api/v1/chat/completions', {
                     method: 'POST',
                     headers: {
-                        'Authorization': 'Bearer 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',
+                        'Authorization': 'Bearer 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',
                         'Content-Type': 'application/json',
                         'Accept': 'application/json'
                     },
                     body: JSON.stringify({
-                        model: 'qwen/qwen3-235b-a22b-thinking-2507',
+                        model: 'tngtech/deepseek-r1t2-chimera:free',
                         messages: [{ role: 'user', content: query }],
                         stream: false
                     })
