--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 const response = await fetch('https://openrouter.ai/api/v1/chat/completions', {
                     method: 'POST',
                     headers: {
-                        'Authorization': 'Bearer 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',
+                        'Authorization': 'Bearer Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6ImI4MjAxYzA5LTExZDctNDM0NS04ZjRjLWY2MTJmNWYxNzRmYyIsImxhc3RfcGFzc3dvcmRfY2hhbmdlIjoxNzUwNjYwODczLCJleHAiOjE3NTYzNTc1MDR9.yTc139SQ4uBbBns5HmGkTeuoTP8ayCefMEtfneOnjjM',
                         'Content-Type': 'application/json',
                         'Accept': 'application/json'
                     },
