--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
       <li class="checklist-item">
         <div class="checklist-header">
           <input type="checkbox" id="item1" onchange="toggleChecked(this)">
-          <label class="main-label" onclick="toggleSubList(this)">Определение цели и аудитории</label>
+          <label class="main-label" onclick="toggleSubList(this)">Определение цели<br>и аудитории</label>
         </div>
         <button class="edit-main-label" onclick="editMainItem(this)">✏️ Изменить</button>
         <div class="sub-list">
