--- a/index.html
+++ b/index.html
@@ -546,7 +546,6 @@
       box-shadow: none;
     }
 
-
     /* --- Стили для индикатора загрузки --- */
     .loading {
       display: none;
@@ -964,7 +963,7 @@
       }
     }
 
-    // --- НОВАЯ ФУНКЦИЯ: Показать изображение в модальном окне ---
+    // --- ФУНКЦИЯ: Показать изображение в модальном окне ---
     function showChecklistImage() {
       try {
         // Получаем все пункты
@@ -1042,7 +1041,7 @@
             }
           }
 
-          // --- НОВАЯ ФУНКЦИЯ СКАЧИВАНИЯ ---
+          // --- ФУНКЦИЯ СКАЧИВАНИЯ ---
           downloadBtn.onclick = function() {
             // Показываем индикатор загрузки и блокируем кнопку
             downloadBtn.disabled = true;
